@@ -24,6 +24,14 @@
 #define _GSSAPIP_KRB5_H_
 
 #include "krb5.h"
+#ifdef HAVE_SYS_TIME_H
+#include <sys/time.h>
+#ifdef TIME_WITH_SYS_TIME
+#include <time.h>
+#endif
+#else
+#include <time.h>
+#endif
 #include "los-proto.h"
 #include <memory.h>
 
