@@ -1,3 +1,7 @@
+Wed Jun  7 10:05:16 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* gssapiP_krb5.h: Include time.h (or sys/time.h) for struct tm
+		structure which is now in the los-proto.h file.
 
 Mon May 22 10:10:41 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* Makefile.in	- Add null install target.
